"report check in 2018-09-24"

--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -7,45 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
-[REUSING WORK]: ./stuwork/Crevin921/think-java-Crevin921
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-	[ERROR] Runtime Error @ java Date
-
-[COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:9: error: ';' expected
-			System.out.print( hour + minute + second)
-			                                         ^
-	Time.java:13: error: class, interface, or enum expected
-	https://books.trinket.io/thinkjava2/chapter2.html
-	^
-	2 errors
+[SETUP] Creating student dir:  ./stuwork/Crevin921
+[PRE-WARN]: Expected non-empty: ./stuwork/Crevin921/think-java-Crevin921
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
+Cloning into 'think-java-Crevin921'...
 	
-[SUMMARY] ['Date: RUNTIME ERROR', 'Time: COMPILE ERROR']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.25
+[GITWORK DONE]
 
 </pre></body></html>
