--- a/stureports/think-java/NickPoletti1.think-java_results.html
+++ b/stureports/think-java/NickPoletti1.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: NickPoletti1
 <br>Project: think-java
 <br>
@@ -7,90 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[REUSING WORK]: ./stuwork/NickPoletti1/think-java-NickPoletti1
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Date!
-	American Format:
-	Tuesday, August 28, 2018
-	European Format:
-	Tuesday 28 August 2018
+[SETUP] Creating student dir:  ./stuwork/NickPoletti1
+[PRE-WARN]: Expected non-empty: ./stuwork/NickPoletti1/think-java-NickPoletti1
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
+Cloning into 'think-java-NickPoletti1'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Time!
-	Seconds since midnight:
-	39690.0 Seconds
-	Seconds remaining in the day:
-	46710.0 Seconds
-	Percentage of day remaining:
-	45.9375%
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-Exercise3!
-	How many seconds:
-	13 seconds = 0 hours,0 minutes,13 seconds
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-Exercise4!
-	I'm thinking of a number between 1 - 100
-	Can you guess what it is
-	Guess a number: 
-	Your guess is 13
-	The number I was thinking of was 46
-	Your guess was off by: 33
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-MultAdd Exercise
-	5.0
-	1.0606601717798212
-	1.1629395387920924
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+[GITWORK DONE]
 
 </pre></body></html>
