--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -7,53 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Thursday, July 16, 2015
-	European Format:
-	Thursday 16 July 2015
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
+[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
+Cloning into 'think-java-asianaaron2'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-The number of seconds since midnight: 83505seconds
-	Remaining seconds: 6585seconds
-	The percent of the completed course of the day: 95.83333333333334%
-	Start time~~~~~ 11:11.45
-	End time~~~~~11:58.17
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+[GITWORK DONE]
 
 </pre></body></html>
