--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -7,78 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[REUSING WORK]: ./stuwork/jadenngo13/think-java-jadenngo13
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format: 
-	Tuesday, August 28, 2018
-	European Format: 
-	Tuesday 28 August 2018
+[SETUP] Creating student dir:  ./stuwork/jadenngo13
+[PRE-WARN]: Expected non-empty: ./stuwork/jadenngo13/think-java-jadenngo13
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
+Cloning into 'think-java-jadenngo13'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Time(in seconds) elasped since midnight: 66001
-	Time(in seconds) left in day: 20399
-	Percent of day passed: 76.3900462962963%
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-Enter a number: Your guess is: 13
-	The number I was thinking of was: 79
-	You were off by: 66
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-13.049999999999999
-	1.0606601717798212
-	1.2160974411794894
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+[GITWORK DONE]
 
 </pre></body></html>
