--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: kaifouts
 <br>Project: think-java
 <br>
@@ -7,67 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] kaifouts
-[REUSING WORK]: ./stuwork/kaifouts/think-java-kaifouts
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Thursday, July 16, 2018
-	European Format:
-	Thursday 16 July 2018
+[SETUP] Creating student dir:  ./stuwork/kaifouts
+[PRE-WARN]: Expected non-empty: ./stuwork/kaifouts/think-java-kaifouts
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
+Cloning into 'think-java-kaifouts'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Time:
-	11: 15: 31
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] javac failed Multadd.java Multadd.java:6: error: <identifier> expected
-	System.out.println("Exercise 6...");
-	                  ^
-	Multadd.java:6: error: illegal start of type
-	System.out.println("Exercise 6...");
-	                   ^
-	Multadd.java:9: error: <identifier> expected
-			System.out.println("multAdd"
-			                  ^
-	Multadd.java:9: error: illegal start of type
-			System.out.println("multAdd"
-			                   ^
-	Multadd.java:9: error: ')' expected
-			System.out.println("multAdd"
-			                            ^
-	Multadd.java:12: error: ';' expected
-		public static double Multadd(double a, double b, double c){
-		      ^
-	6 errors
-	
-[SUMMARY] ['Multadd: COMPILE ERROR']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.50
+[GITWORK DONE]
 
 </pre></body></html>
