--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -7,86 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Tuesday, August 28, 2018
-	European Format:
-	Tuesday 28 August 2018
+[SETUP] Creating student dir:  ./stuwork/AdamRashid
+[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
+Cloning into 'think-java-AdamRashid'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds since midnight: 
-	43709.0
-	Seconds left in the day: 
-	42691.0
-	Percentage of day left: 
-	49.410879629629626
-	Minutes elapsed since you started coding: 
-	18.51666666666665
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-How many seconds? 13.00 sec = 0 hour, 0 min
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-I'm thinking of a number between 1 and 100(Including Both)
-	Can you guess what it is? 
-	Type a number: You guessed: 13
-	The number I was thinking of is: 69
-	You were off by: 56
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-5.0
-	1.0606601717798212
-	5.298317366548037
-	1.1241498650869424
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+[GITWORK DONE]
 
 </pre></body></html>
