--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: Fwuff547
 <br>Project: think-java
 <br>
@@ -7,75 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[REUSING WORK]: ./stuwork/Fwuff547/think-java-Fwuff547
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format: 
-	Wednesday, September 22, 2001
-	European Format: 
-	Wednesday 22 September 2001
+[SETUP] Creating student dir:  ./stuwork/Fwuff547
+[PRE-WARN]: Expected non-empty: ./stuwork/Fwuff547/think-java-Fwuff547
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
+Cloning into 'think-java-Fwuff547'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds since midnight: 42630
-	Seconds left until midnight: 43770
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-How many seconds?
-	13 seconds is 0 hours, 0 minutes, 0 seconds
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 33, you were 20 off.
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-The result is 5.0
-	The result is: 1.0606601717798212
-	The result is: 1.0303150673048738
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+[GITWORK DONE]
 
 </pre></body></html>
