--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: KaylaRidesBikes
 <br>Project: think-java
 <br>
@@ -7,47 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] KaylaRidesBikes
-[REUSING WORK]: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Tuesday, August 28, 2018
-	European Format:
-	Tuesday, 28 August, 2018
+[SETUP] Creating student dir:  ./stuwork/KaylaRidesBikes
+[PRE-WARN]: Expected non-empty: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-KaylaRidesBikes.git]
+Cloning into 'think-java-KaylaRidesBikes'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Number of seconds since midnight:
-	36047
-	864047
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+[GITWORK DONE]
 
 </pre></body></html>
