--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -7,24 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] Marcus620
-[REUSING WORK]: ./stuwork/Marcus620/think-java-Marcus620
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.00
+[SETUP] Creating student dir:  ./stuwork/Marcus620
+[PRE-WARN]: Expected non-empty: ./stuwork/Marcus620/think-java-Marcus620
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
+Cloning into 'think-java-Marcus620'...
+	
+[GITWORK DONE]
 
 </pre></body></html>
