--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: MegaMichael1000
 <br>Project: think-java
 <br>
@@ -7,79 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] MegaMichael1000
-[REUSING WORK]: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Thursday, August 28, 2018
-	Thursday August 28 2018
+[SETUP] Creating student dir:  ./stuwork/MegaMichael1000
+[PRE-WARN]: Expected non-empty: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
+Cloning into 'think-java-MegaMichael1000'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds since midnight: 44520.0
-	Seconds remaining in day: 41880.0
-	Percentage of day: 48.47222
-	Time elapsed: 1810.0
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-I'm thinking of a number between 1 and 100
-	(including both). Can you guess what it is?
-	Type a number: Your guess is: 13
-	The number I was thinking of is: 78
-	You were off by: 65
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-5.0
-	1.0606601717798212
-	1.1241498650869424
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+[GITWORK DONE]
 
 </pre></body></html>
