--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -7,44 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[REUSING WORK]: ./stuwork/banjojeebus/think-java-banjojeebus
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format: Tuesday,August 28,2018
-	European format: Tuesday 28 August 2018
+[SETUP] Creating student dir:  ./stuwork/banjojeebus
+[PRE-WARN]: Expected non-empty: ./stuwork/banjojeebus/think-java-banjojeebus
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
+Cloning into 'think-java-banjojeebus'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds remaining: 39870
-	Percent of day passed: 53.854168
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+[GITWORK DONE]
 
 </pre></body></html>
