--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: bethtojatjar
 <br>Project: think-java
 <br>
@@ -7,57 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] bethtojatjar
-[REUSING WORK]: ./stuwork/bethtojatjar/think-java-bethtojatjar
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Thursday, July 16, 2015
-	European Format: 
-	Thursday 16 July 2015
+[SETUP] Creating student dir:  ./stuwork/bethtojatjar
+[PRE-WARN]: Expected non-empty: ./stuwork/bethtojatjar/think-java-bethtojatjar
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-bethtojatjar.git]
+Cloning into 'think-java-bethtojatjar'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-The amount of seconds since midnight is: 39780 seconds
-	The amount of seconds left in the day is: 50280 seconds
-	The percentage of the day gone: 46.041668%
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-	[ERROR] Runtime Error @ java Multadd
-
-[SUMMARY] ['Multadd: RUNTIME ERROR']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.55
+[GITWORK DONE]
 
 </pre></body></html>
