--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: coleschomer
 <br>Project: think-java
 <br>
@@ -7,38 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] coleschomer
-[REUSING WORK]: ./stuwork/coleschomer/think-java-coleschomer
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Thursday, July 16 2015
-	European Format:
-	Thursday 16 July 2015
+[SETUP] Creating student dir:  ./stuwork/coleschomer
+[PRE-WARN]: Expected non-empty: ./stuwork/coleschomer/think-java-coleschomer
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-coleschomer.git]
+Cloning into 'think-java-coleschomer'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[ERROR] Missing Compile Target:Time.java
-[SUMMARY] ['Date: PASS', 'Time: MISSING']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.00
+[GITWORK DONE]
 
 </pre></body></html>
