--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: gaberoessler
 <br>Project: think-java
 <br>
@@ -7,71 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[REUSING WORK]: ./stuwork/gaberoessler/think-java-gaberoessler
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Tuesday
-	28
-	August
-	2018
-	American Format: 
-	Tuesday, August 28, 2018
-	European Format: 
-	Tuesday 28 August 2018
+[SETUP] Creating student dir:  ./stuwork/gaberoessler
+[PRE-WARN]: Expected non-empty: ./stuwork/gaberoessler/think-java-gaberoessler
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
+Cloning into 'think-java-gaberoessler'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-40305
-	49785
-	46.649307
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-How many seconds? 
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: MISSING']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-The result is 5.0
-	The result is 1.0606601717798212
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.80
+[GITWORK DONE]
 
 </pre></body></html>
