--- a/stureports/think-java/notswett.think-java_results.html
+++ b/stureports/think-java/notswett.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: notswett
 <br>Project: think-java
 <br>
@@ -7,26 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] notswett
-[REUSING WORK]: ./stuwork/notswett/think-java-notswett
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.00
+[SETUP] Creating student dir:  ./stuwork/notswett
+[PRE-WARN]: Expected non-empty: ./stuwork/notswett/think-java-notswett
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-notswett.git]
+Cloning into 'think-java-notswett'...
+	
+[GITWORK DONE]
 
 </pre></body></html>
