--- a/stureports/think-java/slammensam.think-java_results.html
+++ b/stureports/think-java/slammensam.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: slammensam
 <br>Project: think-java
 <br>
@@ -7,46 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] slammensam
-[REUSING WORK]: ./stuwork/slammensam/think-java-slammensam
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Date:
-	Tuesday, August 28, 2018
-	European Date:
-	Tuesday 28 August 2018
+[SETUP] Creating student dir:  ./stuwork/slammensam
+[PRE-WARN]: Expected non-empty: ./stuwork/slammensam/think-java-slammensam
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-slammensam.git]
+Cloning into 'think-java-slammensam'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:27: error: cannot find symbol
-			System.out.pritnln(minute - minute1);
-			          ^
-	  symbol:   method pritnln(int)
-	  location: variable out of type PrintStream
-	1 error
-	
-[SUMMARY] ['Date: PASS', 'Time: COMPILE ERROR']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.30
+[GITWORK DONE]
 
 </pre></body></html>
