--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-23
+Run date: 2018-09-24
 <br>Student User: tpipitone
 <br>Project: think-java
 <br>
@@ -7,49 +7,12 @@ Run date: 2018-09-23
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[REUSING WORK]: ./stuwork/tpipitone/think-java-tpipitone
-[GITWORK] Re-using code.
-
-*[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Tuesday
-	8
-	May
-	2018
-	Tuesday, May 8, 2018
+[SETUP] Creating student dir:  ./stuwork/tpipitone
+[PRE-WARN]: Expected non-empty: ./stuwork/tpipitone/think-java-tpipitone
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
+Cloning into 'think-java-tpipitone'...
 	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-	[ERROR] Runtime Error @ java Time
-
-[SUMMARY] ['Date: PASS', 'Time: RUNTIME ERROR']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
-[DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.35
+[GITWORK DONE]
 
 </pre></body></html>
