"report check in 2018-09-24"

--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -15,4 +15,62 @@ Cloning into 'think-java-Jake4902'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[ERROR] Missing Compile Target:Date.java
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+The current time is 19.0:39.0Seconds since midnight: 70740.0Seconds remaining in day19260.0percentage of day that has passed: 0.81875Time elapsed: 0.0-8.0
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: MISSING', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Enter seconds: 
+	13 seconds = 0 hours, 0 minutes, and 13 seconds.
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+I'm thinking of a number between 1 and 100
+	(including both). Can you guess what it is?
+	Type a number: Your guess is: 13
+	The number I was thinking of is: 7
+	You were off by: 6
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+Multadd Trig = 1.0606601717798212
+	expSum(4) = 1.0640624148157594
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.80
+
 </pre></body></html>
