--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -15,4 +15,68 @@ Cloning into 'think-java-gaberoessler'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+Tuesday
+	28
+	August
+	2018
+	American Format: 
+	Tuesday, August 28, 2018
+	European Format: 
+	Tuesday 28 August 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+40305
+	49785
+	46.649307
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+How many seconds? 
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: MISSING']
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+The result is 5.0
+	The result is 1.0606601717798212
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.80
+
 </pre></body></html>
