--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -15,4 +15,73 @@ Cloning into 'think-java-1amsmith1020'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+Friday
+	10
+	May
+	2011
+	European Style:
+	Friday 10 May 2011
+	American Style:
+	Friday, May 10, 2011
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Seconds since midnight:39494
+	Seconds remaining today:46906
+	Percentage of day passed:45.710648
+	Minuites passed:23
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Enter amount of seconds:
+	0 hours 0 minuites 13 seconds 
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+57
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] javac failed Multadd.java Multadd.java:1: error: class, interface, or enum expected
+	public static void Multiadd(String[] args) {
+	              ^
+	1 error
+	
+[SUMMARY] ['Multadd: COMPILE ERROR']
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.90
+
 </pre></body></html>
