--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -15,4 +15,44 @@ Cloning into 'think-java-KaylaRidesBikes'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+American Format:
+	Tuesday, August 28, 2018
+	European Format:
+	Tuesday, 28 August, 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight:
+	36047
+	864047
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+	[ERROR] No chapter work for:chapter3
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+	[ERROR] No chapter work for:chapter4
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
+
 </pre></body></html>
