--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -15,4 +15,21 @@ Cloning into 'think-java-Marcus620'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+	[ERROR] No chapter work for:chapter2
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+	[ERROR] No chapter work for:chapter3
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+	[ERROR] No chapter work for:chapter4
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.00
+
 </pre></body></html>
