--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -15,4 +15,52 @@ Cloning into 'think-java-bealarson82'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+Hello World!
+	Day: tuesday
+	Date: 28
+	Month: august
+	Year: 2018
+	American Style: 
+	tuesday, august 28, 2018
+	European Style: 
+	tuesday 28 august 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight: 
+	16259
+	Number of seconds remaining in the day: 
+	70141.0
+	Percentage of the day that has passed: 
+	18.818287%
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+	[ERROR] No chapter work for:chapter3
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+	[ERROR] No chapter work for:chapter4
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
+
 </pre></body></html>
