--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -15,4 +15,35 @@ Cloning into 'think-java-coleschomer'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+American Format:
+	Thursday, July 16 2015
+	European Format:
+	Thursday 16 July 2015
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[ERROR] Missing Compile Target:Time.java
+[SUMMARY] ['Date: PASS', 'Time: MISSING']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+	[ERROR] No chapter work for:chapter3
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+	[ERROR] No chapter work for:chapter4
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.00
+
 </pre></body></html>
