--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -15,4 +15,64 @@ Cloning into 'think-java-kaifouts'...
 	
 [GITWORK DONE]
 
+*[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+American Format:
+	Thursday, July 16, 2018
+	European Format:
+	Thursday 16 July 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Time:
+	11: 15: 31
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+	[ERROR] No chapter work for:chapter3
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] javac failed Multadd.java Multadd.java:6: error: <identifier> expected
+	System.out.println("Exercise 6...");
+	                  ^
+	Multadd.java:6: error: illegal start of type
+	System.out.println("Exercise 6...");
+	                   ^
+	Multadd.java:9: error: <identifier> expected
+			System.out.println("multAdd"
+			                  ^
+	Multadd.java:9: error: illegal start of type
+			System.out.println("multAdd"
+			                   ^
+	Multadd.java:9: error: ')' expected
+			System.out.println("multAdd"
+			                            ^
+	Multadd.java:12: error: ';' expected
+		public static double Multadd(double a, double b, double c){
+		      ^
+	6 errors
+	
+[SUMMARY] ['Multadd: COMPILE ERROR']
+[DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.50
+
 </pre></body></html>
