--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -42,19 +42,46 @@ Tuesday
 *[BEGIN chapter3]
   [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
+	
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+Guess my number between 1 and 100!
+	Type a number: Your guess is: 13
+	My number was 96. You were off by 83.
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTED TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
-	[ERROR] Missing Compile Target:Multadd.java
-[SUMMARY] ['Multadd: MISSING']
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+Ch 4 Multadd
+	Multadd 1.0, 2.0, 3.0 = 5.0
+	Sin / cos Multadd + 1.414213562373095
+	Log multadd - 5.298317366548037
+	expSum(1) - 1.1629395387920924
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.35
+          [SCORE] 0.95
 
 </pre></body></html>
