--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -24,15 +24,12 @@ Cloning into 'think-java-Crevin921'...
 	[ERROR] Runtime Error @ java Date
 
 [COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:9: error: ';' expected
-			System.out.print( hour + minute + second)
-			                                         ^
-	Time.java:13: error: class, interface, or enum expected
-	https://books.trinket.io/thinkjava2/chapter2.html
-	^
-	2 errors
-	
-[SUMMARY] ['Date: RUNTIME ERROR', 'Time: COMPILE ERROR']
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+	[ERROR] Runtime Error @ java Time
+
+[SUMMARY] ['Date: RUNTIME ERROR', 'Time: RUNTIME ERROR']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -51,6 +48,6 @@ Cloning into 'think-java-Crevin921'...
 [SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.25
+          [SCORE] 0.30
 
 </pre></body></html>
