"report check in 2018-09-26"

--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -14,22 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-1amsmith1020'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Friday
-	10
-	May
-	2011
-	European Style:
-	Friday 10 May 2011
-	American Style:
-	Friday, May 10, 2011
-	
+
 <--
 	[OUTPUT OK]
 
@@ -37,11 +31,7 @@ Friday
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Seconds since midnight:39494
-	Seconds remaining today:46906
-	Percentage of day passed:45.710648
-	Minuites passed:23
-	
+
 <--
 	[OUTPUT OK]
 
@@ -49,13 +39,12 @@ Seconds since midnight:39494
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter amount of seconds:
-	0 hours 0 minuites 13 seconds 
+
 <--
 	[OUTPUT OK]
 
@@ -63,8 +52,7 @@ Enter amount of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-30
-	
+
 <--
 	[OUTPUT OK]
 
@@ -72,7 +60,7 @@ Enter amount of seconds:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[ERROR] javac failed Multadd.java Multadd.java:1: error: class, interface, or enum expected
 	public static void Multiadd(String[] args) {
