--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-AdamRashid'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format:
-	Tuesday, August 28, 2018
-	European Format:
-	Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,15 +31,7 @@ American Format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Seconds since midnight: 
-	43709.0
-	Seconds left in the day: 
-	42691.0
-	Percentage of day left: 
-	49.410879629629626
-	Minutes elapsed since you started coding: 
-	18.51666666666665
-	
+
 <--
 	[OUTPUT OK]
 
@@ -49,13 +39,12 @@ Seconds since midnight:
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-How many seconds? 13.00 sec = 0 hour, 0 min
-	
+
 <--
 	[OUTPUT OK]
 
@@ -63,12 +52,7 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-I'm thinking of a number between 1 and 100(Including Both)
-	Can you guess what it is? 
-	Type a number: You guessed: 13
-	The number I was thinking of is: 69
-	You were off by: 56
-	
+
 <--
 	[OUTPUT OK]
 
@@ -76,16 +60,12 @@ I'm thinking of a number between 1 and 100(Including Both)
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-5.0
-	1.0606601717798212
-	5.298317366548037
-	1.1241498650869424
-	
+
 <--
 	[OUTPUT OK]
 
