--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: DrKiefer
 <br>Project: think-java
 <br>
@@ -14,16 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-DrKiefer'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Tuesday, August 28, 2018
-	Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -31,11 +31,7 @@ Tuesday, August 28, 2018
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Time Since Midnight: 12: 0: 21
-	Seconds until Midnight: 43179.0
-	Percentage of Day Passed: 49.975693
-	Elapsed Time: 15.789999999999964
-	
+
 <--
 	[OUTPUT OK]
 
@@ -43,14 +39,12 @@ Time Since Midnight: 12: 0: 21
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter number of seconds: 
-	0: 0: 13
-	
+
 <--
 	[OUTPUT OK]
 
@@ -58,12 +52,7 @@ Enter number of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-Im thinking of a number between 1 and 100. Can you guess it?
-	What's your guess? 
-	Your guess is: 13
-	The number I was think of is 54
-	You were off by 41
-	
+
 <--
 	[OUTPUT OK]
 
@@ -71,7 +60,7 @@ Im thinking of a number between 1 and 100. Can you guess it?
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
