--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: Jake4902
 <br>Project: think-java
 <br>
@@ -14,16 +14,18 @@ Run date: 2018-09-24
 Cloning into 'think-java-Jake4902'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[ERROR] Missing Compile Target:Date.java
 [COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-The current time is 19.0:39.0Seconds since midnight: 70740.0Seconds remaining in day19260.0percentage of day that has passed: 0.81875Time elapsed: 0.0-8.0
+
 <--
 	[OUTPUT OK]
 
@@ -31,13 +33,12 @@ The current time is 19.0:39.0Seconds since midnight: 70740.0Seconds remaining in
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter seconds: 
-	13 seconds = 0 hours, 0 minutes, and 13 seconds.
+
 <--
 	[OUTPUT OK]
 
@@ -45,12 +46,7 @@ Enter seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-I'm thinking of a number between 1 and 100
-	(including both). Can you guess what it is?
-	Type a number: Your guess is: 13
-	The number I was thinking of is: 33
-	You were off by: 100
-	
+
 <--
 	[OUTPUT OK]
 
@@ -58,13 +54,12 @@ I'm thinking of a number between 1 and 100
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-Multadd Trig = 1.0606601717798212
-	expSum(4) = 1.0640624148157594
+
 <--
 	[OUTPUT OK]
 
