--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: MegaMichael1000
 <br>Project: think-java
 <br>
@@ -14,16 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-MegaMichael1000'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Thursday, August 28, 2018
-	Thursday August 28 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -31,11 +31,7 @@ Thursday, August 28, 2018
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Seconds since midnight: 44520.0
-	Seconds remaining in day: 41880.0
-	Percentage of day: 48.47222
-	Time elapsed: 1810.0
-	
+
 <--
 	[OUTPUT OK]
 
@@ -43,13 +39,12 @@ Seconds since midnight: 44520.0
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
-	
+
 <--
 	[OUTPUT OK]
 
@@ -57,12 +52,7 @@ Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-I'm thinking of a number between 1 and 100
-	(including both). Can you guess what it is?
-	Type a number: Your guess is: 13
-	The number I was thinking of is: 92
-	You were off by: 79
-	
+
 <--
 	[OUTPUT OK]
 
@@ -70,15 +60,12 @@ I'm thinking of a number between 1 and 100
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-5.0
-	1.0606601717798212
-	1.1241498650869424
-	
+
 <--
 	[OUTPUT OK]
 
