--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-aliyaaware'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American format:
-	Thursday, July16, 2015
-	European format:
-	Thursday16July2015
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,8 +31,7 @@ American format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-It has been 50400 seconds since midnight
-	
+
 <--
 	[OUTPUT OK]
 
@@ -42,12 +39,12 @@ It has been 50400 seconds since midnight
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 seconds
+
 <--
 	[OUTPUT OK]
 
@@ -55,11 +52,7 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-Im thinking of a number between 1-100, can you guess it?
-	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 73
-	You were off by: 60
-	
+
 <--
 	[OUTPUT OK]
 
@@ -67,16 +60,12 @@ Im thinking of a number between 1-100, can you guess it?
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-5.0
-	0.16066013601703433
-	5.298317366548037
-	1.0303150673048738
-	
+
 <--
 	[OUTPUT OK]
 
