--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: bethtojatjar
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-bethtojatjar'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format:
-	Thursday, July 16, 2015
-	European Format: 
-	Thursday 16 July 2015
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,10 +31,7 @@ American Format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-The amount of seconds since midnight is: 39780 seconds
-	The amount of seconds left in the day is: 50280 seconds
-	The percentage of the day gone: 46.041668%
-	
+
 <--
 	[OUTPUT OK]
 
@@ -44,7 +39,7 @@ The amount of seconds since midnight is: 39780 seconds
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
@@ -53,7 +48,7 @@ The amount of seconds since midnight is: 39780 seconds
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
