--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: gaberoessler
 <br>Project: think-java
 <br>
@@ -14,22 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-gaberoessler'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Tuesday
-	28
-	August
-	2018
-	American Format: 
-	Tuesday, August 28, 2018
-	European Format: 
-	Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -37,10 +31,7 @@ Tuesday
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-40305
-	49785
-	46.649307
-	
+
 <--
 	[OUTPUT OK]
 
@@ -48,35 +39,39 @@ Tuesday
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-How many seconds? 
+
 <--
 	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: MISSING']
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-The result is 5.0
-	The result is 1.0606601717798212
-	
+
 <--
 	[OUTPUT OK]
 
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.80
+          [SCORE] 1.00
 
 </pre></body></html>
