--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-jadenngo13'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format: 
-	Tuesday, August 28, 2018
-	European Format: 
-	Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,10 +31,7 @@ American Format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Time(in seconds) elasped since midnight: 66001
-	Time(in seconds) left in day: 20399
-	Percent of day passed: 76.3900462962963%
-	
+
 <--
 	[OUTPUT OK]
 
@@ -44,13 +39,12 @@ Time(in seconds) elasped since midnight: 66001
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
-	
+
 <--
 	[OUTPUT OK]
 
@@ -58,10 +52,7 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-Enter a number: Your guess is: 13
-	The number I was thinking of was: 19
-	You were off by: 6
-	
+
 <--
 	[OUTPUT OK]
 
@@ -69,15 +60,12 @@ Enter a number: Your guess is: 13
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-13.049999999999999
-	1.0606601717798212
-	1.2160974411794894
-	
+
 <--
 	[OUTPUT OK]
 
