--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: maxckaeh
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-maxckaeh'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format:
-	Tuesday, August 30, 2018
-	European Format:
-	Tuesday 30 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,10 +31,7 @@ American Format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-38635 seconds have passed since midnight.
-	There are 47765 seconds left in the day.
-	The day is 44.716434% complete.
-	
+
 <--
 	[OUTPUT OK]
 
@@ -44,7 +39,7 @@ American Format:
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
@@ -53,14 +48,12 @@ American Format:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-1.0606601717798212
-	1.2005440615054193
-	
+
 <--
 	[OUTPUT OK]
 
