--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: Fwuff547
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-Fwuff547'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format: 
-	Wednesday, September 22, 2001
-	European Format: 
-	Wednesday 22 September 2001
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,9 +31,7 @@ American Format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Seconds since midnight: 42630
-	Seconds left until midnight: 43770
-	
+
 <--
 	[OUTPUT OK]
 
@@ -43,13 +39,12 @@ Seconds since midnight: 42630
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-How many seconds?
-	13 seconds is 0 hours, 0 minutes, 0 seconds
+
 <--
 	[OUTPUT OK]
 
@@ -57,8 +52,7 @@ How many seconds?
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 49, you were 36 off.
+
 <--
 	[OUTPUT OK]
 
@@ -66,15 +60,12 @@ I have a number between 1 and 100, guess what it is?
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-The result is 5.0
-	The result is: 1.0606601717798212
-	The result is: 1.0303150673048738
-	
+
 <--
 	[OUTPUT OK]
 
