--- a/stureports/think-java/NickPoletti1.think-java_results.html
+++ b/stureports/think-java/NickPoletti1.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: NickPoletti1
 <br>Project: think-java
 <br>
@@ -14,19 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-NickPoletti1'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Date!
-	American Format:
-	Tuesday, August 28, 2018
-	European Format:
-	Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -34,14 +31,7 @@ Date!
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Time!
-	Seconds since midnight:
-	39690.0 Seconds
-	Seconds remaining in the day:
-	46710.0 Seconds
-	Percentage of day remaining:
-	45.9375%
-	
+
 <--
 	[OUTPUT OK]
 
@@ -49,15 +39,12 @@ Time!
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Exercise3!
-	How many seconds:
-	13 seconds = 0 hours,0 minutes,13 seconds
-	
+
 <--
 	[OUTPUT OK]
 
@@ -65,14 +52,7 @@ Exercise3!
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-Exercise4!
-	I'm thinking of a number between 1 - 100
-	Can you guess what it is
-	Guess a number: 
-	Your guess is 13
-	The number I was thinking of was 50
-	Your guess was off by: 37
-	
+
 <--
 	[OUTPUT OK]
 
@@ -80,16 +60,12 @@ Exercise4!
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-MultAdd Exercise
-	5.0
-	1.0606601717798212
-	1.1629395387920924
-	
+
 <--
 	[OUTPUT OK]
 
