--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: ReidLuhn
 <br>Project: think-java
 <br>
@@ -14,17 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-ReidLuhn'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Hello world!
-	American format: Tuesday, August 28, 2018
-	European format: Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -32,11 +31,7 @@ Hello world!
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Hello world!
-	Seconds since midnight: 42949
-	Seconds left in the day: 43451
-	Percent of the day: 49.709489941596985 %
-	
+
 <--
 	[OUTPUT OK]
 
@@ -44,12 +39,12 @@ Hello world!
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
+
 <--
 	[OUTPUT OK]
 
@@ -57,10 +52,7 @@ Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-I'm thinking of a number between 1 and 100, can you guess it?
-	Your guess is: 13
-	My number was: 23
-	You were off by: 10
+
 <--
 	[OUTPUT OK]
 
@@ -68,16 +60,12 @@ I'm thinking of a number between 1 and 100, can you guess it?
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-Up and running!
-	The answer is: 5.0
-	The answer is: 1.0606601717798212
-	The answer is: 1.096640888228596
-	
+
 <--
 	[OUTPUT OK]
 
