--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -14,18 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-asianaaron2'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format:
-	Thursday, July 16, 2015
-	European Format:
-	Thursday 16 July 2015
-	
+
 <--
 	[OUTPUT OK]
 
@@ -33,12 +31,7 @@ American Format:
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-The number of seconds since midnight: 83505seconds
-	Remaining seconds: 6585seconds
-	The percent of the completed course of the day: 95.83333333333334%
-	Start time~~~~~ 11:11.45
-	End time~~~~~11:58.17
-	
+
 <--
 	[OUTPUT OK]
 
@@ -46,7 +39,7 @@ The number of seconds since midnight: 83505seconds
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
@@ -55,7 +48,7 @@ The number of seconds since midnight: 83505seconds
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
