--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -14,16 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-banjojeebus'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-American Format: Tuesday,August 28,2018
-	European format: Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -31,9 +31,7 @@ American Format: Tuesday,August 28,2018
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Seconds remaining: 39870
-	Percent of day passed: 53.854168
-	
+
 <--
 	[OUTPUT OK]
 
@@ -41,12 +39,12 @@ Seconds remaining: 39870
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
