--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -14,23 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-bealarson82'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Hello World!
-	Day: tuesday
-	Date: 28
-	Month: august
-	Year: 2018
-	American Style: 
-	tuesday, august 28, 2018
-	European Style: 
-	tuesday 28 august 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -38,13 +31,7 @@ Hello World!
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-Number of seconds since midnight: 
-	16259
-	Number of seconds remaining in the day: 
-	70141.0
-	Percentage of the day that has passed: 
-	18.818287%
-	
+
 <--
 	[OUTPUT OK]
 
@@ -52,12 +39,12 @@ Number of seconds since midnight:
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
