--- a/stureports/think-java/shanebaxter101.think-java_results.html
+++ b/stureports/think-java/shanebaxter101.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: shanebaxter101
 <br>Project: think-java
 <br>
@@ -14,19 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-shanebaxter101'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-28
-	8
-	2018
-	American format: Tuesday, August 28, 2018
-	European format: Tuesday 28 August 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -34,10 +31,7 @@ Cloning into 'think-java-shanebaxter101'...
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-It has been: 42812.0 seconds since midnight
-	There are: 43588.0 seconds left in the day
-	The day is: 49.550926percent done!
-	
+
 <--
 	[OUTPUT OK]
 
@@ -45,14 +39,12 @@ It has been: 42812.0 seconds since midnight
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-Enter a number of seconds: 
-	That is: 0 hours, 0 minutes, and  13 seconds
-	
+
 <--
 	[OUTPUT OK]
 
@@ -60,13 +52,7 @@ Enter a number of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-Im thinking of a number between 1 and 100,(including both)
-	Can you guess what it is?
-	Type a number: 
-	Your guess is: 13
-	The number I was thinking of was: 59
-	You were off by: -46
-	
+
 <--
 	[OUTPUT OK]
 
@@ -74,15 +60,12 @@ Im thinking of a number between 1 and 100,(including both)
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-20.419999999999998
-	1.0606601717798212
-	1.0640624148157594
-	
+
 <--
 	[OUTPUT OK]
 
