--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-24
+Run date: 2018-09-26
 <br>Student User: tpipitone
 <br>Project: think-java
 <br>
@@ -14,19 +14,16 @@ Run date: 2018-09-24
 Cloning into 'think-java-tpipitone'...
 	
 [GITWORK DONE]
+[Assignment]  >asignment_1<
+  [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
-  [EXPECTED TARGETS] ['Date', 'Time']]
+  [EXPECTING TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
 -->
-Tuesday
-	8
-	May
-	2018
-	Tuesday, May 8, 2018
-	
+
 <--
 	[OUTPUT OK]
 
@@ -34,19 +31,20 @@ Tuesday
 	[SUCCESSFUL COMPILE] Time.java
 [RUNNING] Time
 -->
-	[ERROR] Runtime Error @ java Time
 
-[SUMMARY] ['Date: PASS', 'Time: RUNTIME ERROR']
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
-  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
 -->
-How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
-	
+
 <--
 	[OUTPUT OK]
 
@@ -54,10 +52,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-Guess my number between 1 and 100!
-	Type a number: Your guess is: 13
-	My number was 96. You were off by 83.
-	
+
 <--
 	[OUTPUT OK]
 
@@ -65,23 +60,18 @@ Guess my number between 1 and 100!
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Multadd']]
+  [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-Ch 4 Multadd
-	Multadd 1.0, 2.0, 3.0 = 5.0
-	Sin / cos Multadd + 1.414213562373095
-	Log multadd - 5.298317366548037
-	expSum(1) - 1.1629395387920924
-	
+
 <--
 	[OUTPUT OK]
 
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.95
+          [SCORE] 1.00
 
 </pre></body></html>
