--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -70,6 +70,6 @@ Cloning into 'think-java-1amsmith1020'...
 [SUMMARY] ['Multadd: COMPILE ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.90
+          [SCORE] <font face="verdana" color="green">0.90</font>
 
 </pre></body></html>
