--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -45,9 +45,15 @@ Cloning into 'think-java-banjojeebus'...
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[ERROR] javac failed Multadd.java Multadd.java:10: error: ';' expected
+			double sqrtOfx
+			              ^
+	1 error
+	
+[SUMMARY] ['Multadd: COMPILE ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.50
 
 </pre></body></html>
