--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -14,7 +14,7 @@ Run date: 2018-09-26
 Cloning into 'think-java-AdamRashid'...
 	
 [GITWORK DONE]
-[Assignment]  >asignment_1<
+[Assignment]  >Think Java: 1<
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -71,7 +71,7 @@ Cloning into 'think-java-AdamRashid'...
 
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+[ASSIGNMENT DONE] Think Java: 1
+          [SCORE] <font face="verdana" color="green">1.00</font>
 
 </pre></body></html>
