--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: ReidLuhn
 <br>Project: think-java
 <br>
@@ -72,6 +72,6 @@ Cloning into 'think-java-ReidLuhn'...
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 1.00
+          [SCORE] <font face="verdana" color="green">1.00</font>
 
 </pre></body></html>
