--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -14,7 +14,7 @@ Run date: 2018-09-26
 Cloning into 'think-java-asianaaron2'...
 	
 [GITWORK DONE]
-[Assignment]  >asignment_1<
+[Assignment]  >Think Java: 1<
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -49,9 +49,15 @@ Cloning into 'think-java-asianaaron2'...
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+	[ERROR] Runtime Error @ java Multadd
+
+[SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+[ASSIGNMENT DONE] Think Java: 1
+          [SCORE] 0.55
 
 </pre></body></html>
