--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -40,14 +40,34 @@ Cloning into 'think-java-bealarson82'...
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:1: error: class, interface, or enum expected
+	pimport java.util.Scanner;
+	^
+	1 error
+	
+[COMPILING] Exercise4.java
+	[ERROR] javac failed Exercise4.java Exercise4.java:15: error: cannot find symbol
+			guess = sc.nextInt();
+			        ^
+	  symbol:   variable sc
+	  location: class Exercise4
+	1 error
+	
+[SUMMARY] ['Exercise3: COMPILE ERROR', 'Exercise4: COMPILE ERROR']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+	[ERROR] Runtime Error @ java Multadd
+
+[SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.75
 
 </pre></body></html>
