--- a/stureports/think-java/slammensam.think-java_results.html
+++ b/stureports/think-java/slammensam.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-26
+Run date: 2018-09-27
 <br>Student User: slammensam
 <br>Project: think-java
 <br>
@@ -28,19 +28,30 @@ Cloning into 'think-java-slammensam'...
 	[OUTPUT OK]
 
 [COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:27: error: cannot find symbol
-			System.out.pritnln(minute - minute1);
-			          ^
-	  symbol:   method pritnln(int)
-	  location: variable out of type PrintStream
-	1 error
-	
-[SUMMARY] ['Date: PASS', 'Time: COMPILE ERROR']
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:3: error: class, interface, or enum expected
+	int inch;
+	^
+	Exercise3.java:4: error: class, interface, or enum expected
+	double cm;
+	^
+	2 errors
+	
+[COMPILING] Exercise4.java
+	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: COMPILE ERROR', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -50,6 +61,6 @@ Cloning into 'think-java-slammensam'...
 [SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.30
+          [SCORE] 0.50
 
 </pre></body></html>
